@@ -1,19 +1,20 @@
 package com.example.demo.service;
 
-import com.example.demo.dto.ApiKeyRequestDto;
-import com.example.demo.dto.ApiKeyResponseDto;
+import com.example.demo.dto.ApiKeyDto;
 import com.example.demo.entity.ApiKey;
 import com.example.demo.entity.QuotaPlan;
 import com.example.demo.exception.BadRequestException;
-import com.example.demo.exception.NotFoundException;
+import com.example.demo.exception.ResourceNotFoundException;
 import com.example.demo.repository.ApiKeyRepository;
 import com.example.demo.repository.QuotaPlanRepository;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
+@Transactional
 public class ApiKeyServiceImpl implements ApiKeyService {
 
     private final ApiKeyRepository apiKeyRepository;
@@ -25,139 +26,94 @@ public class ApiKeyServiceImpl implements ApiKeyService {
         this.quotaPlanRepository = quotaPlanRepository;
     }
 
-    // ================= CREATE =================
     @Override
-    @Transactional
-    public ApiKeyResponseDto create(ApiKeyRequestDto dto) {
+    public ApiKeyDto createApiKey(ApiKeyDto dto) {
 
-        // ✅ HQL existence check
-        if (apiKeyRepository.existsByKeyValueHql(dto.getKeyValue())) {
-            throw new BadRequestException("keyValue already exists: " + dto.getKeyValue());
+        if (apiKeyRepository.findByKeyValue(dto.getKeyValue()).isPresent()) {
+            throw new BadRequestException("API Key already exists");
         }
 
         QuotaPlan plan = quotaPlanRepository.findById(dto.getPlanId())
-                .orElseThrow(() ->
-                        new NotFoundException("QuotaPlan not found with id: " + dto.getPlanId())
-                );
+                .orElseThrow(() -> new ResourceNotFoundException("Quota plan not found"));
+
+        if (!Boolean.TRUE.equals(plan.getActive())) {
+            throw new BadRequestException("Quota plan is inactive");
+        }
 
         ApiKey key = new ApiKey();
-        key.setKeyValue(dto.getKeyValue().trim());
+        key.setKeyValue(dto.getKeyValue());
         key.setOwnerId(dto.getOwnerId());
         key.setPlan(plan);
-        key.setActive(dto.getActive());
+        key.setActive(true);
 
-        // ✅ SAVE FIRST (transaction starts)
         ApiKey saved = apiKeyRepository.save(key);
 
-        // ✅ FORCE ROLLBACK (like Student example)
-        if (saved.getOwnerId() != null && saved.getOwnerId().equals(999L)) {
-            throw new BadRequestException("Testing Transaction Rollback");
+        dto.setId(saved.getId());
+        dto.setActive(saved.getActive());
+        dto.setCreatedAt(saved.getCreatedAt());
+        dto.setUpdatedAt(saved.getUpdatedAt());
+
+        return dto;
+    }
+
+    @Override
+    public ApiKeyDto updateApiKey(Long id, ApiKeyDto dto) {
+
+        ApiKey key = apiKeyRepository.findById(id)
+                .orElseThrow(() -> new ResourceNotFoundException("API Key not found"));
+
+        if (!key.getActive()) {
+            throw new BadRequestException("Cannot update inactive key");
         }
 
-        return toDto(saved);
+        key.setOwnerId(dto.getOwnerId());
+        apiKeyRepository.save(key);
+
+        return getApiKeyById(id);
     }
 
-    // ================= GET BY ID =================
     @Override
-    @Transactional(readOnly = true)
-    public ApiKeyResponseDto getById(Long id) {
+    public ApiKeyDto getApiKeyById(Long id) {
+
         ApiKey key = apiKeyRepository.findById(id)
-                .orElseThrow(() ->
-                        new NotFoundException("ApiKey not found with id: " + id)
-                );
-        return toDto(key);
+                .orElseThrow(() -> new ResourceNotFoundException("API Key not found"));
+
+        ApiKeyDto dto = new ApiKeyDto();
+        dto.setId(key.getId());
+        dto.setKeyValue(key.getKeyValue());
+        dto.setOwnerId(key.getOwnerId());
+        dto.setPlanId(key.getPlan().getId());
+        dto.setActive(key.getActive());
+        dto.setCreatedAt(key.getCreatedAt());
+        dto.setUpdatedAt(key.getUpdatedAt());
+
+        return dto;
     }
 
-    // ================= GET BY KEY VALUE (HQL) =================
     @Override
-    @Transactional(readOnly = true)
-    public ApiKeyResponseDto getByKeyValue(String keyValue) {
-        ApiKey key = apiKeyRepository.findByKeyValueHql(keyValue)
-                .orElseThrow(() ->
-                        new NotFoundException("ApiKey not found with keyValue: " + keyValue)
-                );
-        return toDto(key);
+    public ApiKeyDto getApiKeyByValue(String keyValue) {
+
+        ApiKey key = apiKeyRepository.findByKeyValue(keyValue)
+                .orElseThrow(() -> new ResourceNotFoundException("API Key not found"));
+
+        return getApiKeyById(key.getId());
     }
 
-    // ================= GET ALL =================
     @Override
-    @Transactional(readOnly = true)
-    public List<ApiKeyResponseDto> getAll() {
+    public List<ApiKeyDto> getAllApiKeys() {
         return apiKeyRepository.findAll()
                 .stream()
-                .map(this::toDto)
-                .toList();
+                .map(k -> getApiKeyById(k.getId()))
+                .collect(Collectors.toList());
     }
 
-    // ================= GET ALL ACTIVE (HQL) =================
     @Override
-    @Transactional(readOnly = true)
-    public List<ApiKeyResponseDto> getAllActive() {
-        return apiKeyRepository.findAllActiveKeysHql()
-                .stream()
-                .map(this::toDto)
-                .toList();
-    }
-
-    // ================= UPDATE =================
-    @Override
-    @Transactional
-    public ApiKeyResponseDto update(Long id, ApiKeyRequestDto dto) {
-
-        ApiKey existing = apiKeyRepository.findById(id)
-                .orElseThrow(() ->
-                        new NotFoundException("ApiKey not found with id: " + id)
-                );
-
-        String newKeyValue = dto.getKeyValue().trim();
-        if (!existing.getKeyValue().equals(newKeyValue)) {
-            apiKeyRepository.findByKeyValueHql(newKeyValue).ifPresent(k -> {
-                throw new BadRequestException("keyValue already exists: " + newKeyValue);
-            });
-            existing.setKeyValue(newKeyValue);
-        }
-
-        QuotaPlan plan = quotaPlanRepository.findById(dto.getPlanId())
-                .orElseThrow(() ->
-                        new NotFoundException("QuotaPlan not found with id: " + dto.getPlanId())
-                );
-
-        existing.setOwnerId(dto.getOwnerId());
-        existing.setPlan(plan);
-        existing.setActive(dto.getActive());
-
-        ApiKey saved = apiKeyRepository.save(existing);
-        return toDto(saved);
-    }
-
-    // ================= DEACTIVATE =================
-    @Override
-    @Transactional
-    public ApiKeyResponseDto deactivate(Long id) {
+    public void deactivateApiKey(Long id) {
 
         ApiKey key = apiKeyRepository.findById(id)
-                .orElseThrow(() ->
-                        new NotFoundException("ApiKey not found with id: " + id)
-                );
+                .orElseThrow(() -> new ResourceNotFoundException("API Key not found"));
 
         key.setActive(false);
-        ApiKey saved = apiKeyRepository.save(key);
-        return toDto(saved);
-    }
-
-    // ================= ENTITY → DTO =================
-    private ApiKeyResponseDto toDto(ApiKey key) {
-        QuotaPlan plan = key.getPlan();
-
-        return new ApiKeyResponseDto(
-                key.getId(),
-                key.getKeyValue(),
-                key.getOwnerId(),
-                plan != null ? plan.getId() : null,
-                plan != null ? plan.getPlanName() : null,
-                key.getActive(),
-                key.getCreatedAt(),
-                key.getUpdatedAt()
-        );
+        apiKeyRepository.save(key);
     }
 }
